20221027 Office Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/4장/4.8_베이지안_최적화로_hyperparameter_튜닝.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/4장/4.8_베이지안_최적화로_hyperparameter_튜닝.ipynb
@@ -2,6 +2,245 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a9cbe30f",
+   "metadata": {},
+   "source": [
+    "# 하이퍼 파라미터 튜닝 수행 방법\n",
+    "- Grid Search\n",
+    "\n",
+    "- Random Search\n",
+    "\n",
+    "- Bayesian Optimization\n",
+    "\n",
+    "- 수동 튜닝"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9176d033",
+   "metadata": {},
+   "source": [
+    "## 하이퍼 파라미터 튜닝의 주요 이슈\n",
+    "\n",
+    "- Gradient Boosting 기반 알고리즘은 튜닝해야 할 하이퍼 파라미터 개수가 많고 범위가 넓어서 가능한 개별 경우의 수가 너무 많음.\n",
+    "\n",
+    "- 이러한 경우의 수가 많을 경우 데이터가 크면 하이퍼 파라미터 튜닝에 굉장히 오랜 시간이 투입되어야 함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffe64dd4",
+   "metadata": {},
+   "source": [
+    "## Grid Search 와 Random Search 의 주요 이슈\n",
+    "\n",
+    "- GridSearchCV(classifier, params, cv=3) and RandomizedSearch(classifier, params, cv=3, n_iter=10)             \n",
+    "    - params = {\n",
+    "\n",
+    "        'max_depth' = [10,20,30,40,50],                 # 5\n",
+    "        'num_leaves' = [35,45,55,65],                   # 4  \n",
+    "        'colsample_bytree=[0.5,0.6,0.7,0.8,0.9,1.0],    # 6\n",
+    "        'subsample'=[0.5,0.6,0.7,0.8,0.9,1.0],          # 6\n",
+    "        'max_bin'=[100,200,300,400],                    # 4\n",
+    "        'min_child_weight'=[10,20,30,40]                # 4\n",
+    "    }\n",
+    "\n",
+    "    - GridSearchCV는 수행 시간이 오래 걸림. 개별 하이퍼 파라미터들을 Grid 형태로 지정하는 것은 한계 존재(데이터 세트가 작을 때 유리)\n",
+    "    - RandomizedSearch는 수행 시간은 줄여주지만, Random한 선택으로 최적 하이퍼 파라미터 검출에 태생적 제약(데이터 세트가 클 때 유리)\n",
+    "    - 두가지 방법 모두 iteration 중에 어느 정도 최적화된 하이퍼 파라미터들을 활용하면서 최적화를 수행할 수 없음\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e15f34a7",
+   "metadata": {},
+   "source": [
+    "## Bayesian(베이지안) 최적화가 필요한 순간\n",
+    "- 가능한 최소의 시도로 최적의 답을 찾아야 할 경우\n",
+    "- 개별 시도가 너무 많은 시간/자원이 필요할 때"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36068cd7",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화(Bayesian Optimization) 개요\n",
+    "\n",
+    "- 베이지안 최적화는 미지의 함수가 반환하는 값의 최소 또는 최대값 만드는 최적해를 짧은 반복을 통해 찾아내는 최적화 방식\n",
+    "- 베이지안 최적화는 새로운 데이터를 입력 받았을 때 최적 함수를 예측하는 사후 모델을 개선해 나가면서 최적 함수를 도출\n",
+    "- 대체 모델(Surrogate Model)과 획득 함수로 구성되며, 대체 모델은 획득 함수로 부터 최적 입력 값을 추천 받은 뒤 이를 기반으로\n",
+    "\n",
+    "  최적 함수 모델을 개선\n",
+    "- 획득함수는 개선된 대체 모델을 기반으로 다시 최적 입력 값을 계산\n",
+    "\n",
+    "    - <img src=\"../images/bayesian.jpg\" width=\"500px\" height=\"300px\" title=\"Bayesian Optimization\"></img>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f47f4bef",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화 수행 단계 - Step 1\n",
+    "\n",
+    "- Step 1 : 최초에는 랜덤하게 하이퍼 파라미터들을 샘플링하여 성능 결과를 관측\n",
+    "    - <img src=\"../images/bayesian_1.jpg\" width=\"400px\" height=\"200px\" title=\"Bayesian Optimization 1단계\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa981da0",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화 수행 단계 - Step 2\n",
+    "\n",
+    "- Step 2 : 관측된 값을 기반으로 대체 모델은 최적 함수를 예측 수정\n",
+    "    - <img src=\"../images/bayesian_1.jpg\" width=\"400px\" height=\"200px\" title=\"Bayesian Optimization 1단계\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0b6749c",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화 수행 단계 - Step 3\n",
+    "\n",
+    "- Step 3 : 획득 함수에서 다음으로 관측할 하이퍼 파라미터 추출\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3f917e8",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화 수행 단계 - Step 4\n",
+    "\n",
+    "- Step 4 : 해당 하이퍼 파라미터로 관측된 값을 기반으로 대체 모델은 다시 최적 함수 예측 추정\n",
+    "    - <img src=\"../images/bayesian_1.jpg\" width=\"400px\" height=\"200px\" title=\"Bayesian Optimization 1단계\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7e3f615",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화 구현 요소\n",
+    "\n",
+    "- 1) 입력값 범위\n",
+    "    - Search_space = {'x':(-10, 10), 'y':(-15,15)}\n",
+    "        - 많은 X 입력값\n",
+    "        - 많은 Y 입력값\n",
+    "\n",
+    "- 2) 함수\n",
+    "    - def black_box_function(x, y):\n",
+    "      return -x**2 -20*y\n",
+    "\n",
+    "- 3) 함수 반환 최대값(최소값) 유추\n",
+    "    - fmin(fn=black_box_function, space=search_space, algo=tpe.suggest, max_evals=20, trials=trial_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23b2bc5d",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화를 구현환 주요 패키지\n",
+    "\n",
+    "- HyperOpt\n",
+    "\n",
+    "- Bayesian optimization\n",
+    "\n",
+    "- Optuna\n",
+    "\n",
+    "- HyperOpt 와 Optuna 많이 사용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bfc74f4",
+   "metadata": {},
+   "source": [
+    "## 베이지안 최적화를 위한 HyperOpt\n",
+    "\n",
+    "- <img src=\"../images/hyperopt.png\" width=\"400px\" height=\"200px\" title=\"베이지안 최적화 - HyperOpt\"></img>\n",
+    "\n",
+    "    - TPE : Tree Parzen Estimation\n",
+    "\n",
+    "- 함수의 최소값을 찾아 줌. 이를 이용하여 하이퍼 파라미터 최적화\n",
+    "- scikit-learn 에서는 HyperOptSklearn 지원하고 있으니 인터넷으로 공부하세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a1e4270",
+   "metadata": {},
+   "source": [
+    "## HyperOpt를 통한 최적화 예시\n",
+    "\n",
+    "- 1) Search Space(입력값 범위)\n",
+    "    - search_space = {'x':hp.quniform('x',5,15,1),\n",
+    "                      'y':hp.uniform('y',0.01, 0.1)}\n",
+    "\n",
+    "        - 많은 X 입력값\n",
+    "        - 많은 Y 입력값\n",
+    "\n",
+    "- 2) 목적 함수\n",
+    "    - def objective_func(search_space):\n",
+    "      x = search_space['x']\n",
+    "      y = search_space['y']\n",
+    "      print('x:', x, 'y:', y)\n",
+    "      return {'loss':x ** 2 + y*20, 'status': STATUS_OK}\n",
+    "\n",
+    "- 3) 목적함수 반환 최소값 유추\n",
+    "     - best = fmin(fn=objective_func, space=search_space, algo=algo, max_evals=5, trials=trials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46e14852",
+   "metadata": {},
+   "source": [
+    "## HyperOpt의 주요 구성 요소\n",
+    "\n",
+    "- search space(입력값 범위)\n",
+    "    - 여러개의 입력 변수들과 이들 값의 범위를 지정\n",
+    "    - hp.quniform(label, low, high, q) : label로 지정된 입력 값 변수 검색 공간을 최소값 low에서 최대값 high까지 q의 \n",
+    "      간격을 가지고 설정\n",
+    "    - hp.uniform(label, low, high) : 최소값 low에서 최대값 high 까지 정규 분포 형태의 검색 공간 설정\n",
+    "    - hp.randint(label, upper) : 0부터 최대값 upper까지 random한 정수 값으로 검색 공간 설정\n",
+    "    - hp.loguniform(label, low, high) : exp(uniform(low, high)) 값을 반환하며, 반환 값의 log 변환 된 값은 정규 분포\n",
+    "      형태를 가지는 검색 공간 설정\n",
+    "\n",
+    "- 목적 함수\n",
+    "    - search space를 입력 받아 로직에 따라 loss값을 계산하고 이를 반환하는 함수\n",
+    "    - 반드시 dictionary 형태의 값을 반환하고 여기에 'loss':loss 값이 기재되어야 함\n",
+    "\n",
+    "- 목적 함수의 최소값을 찾는 함수\n",
+    "    - 목적 함수를 실행하여 최소 반환값(loss)를 최적으로 찾아 내는 함수\n",
+    "    - Bayesian 최적화 기법으로 입력 변수들의 search space상에서 정해진 횟수만큼 입력 변수들을 입력하여 목적 함수의 \n",
+    "    \n",
+    "      반환값(loss)을 최적으로 찾아냄\n",
+    "    \n",
+    "    - hyperopt는 이를 위해 fmin() 함수를 제공\n",
+    "    - fmin() 함수의 인자로 목적함수, search space, 베이지안 최적화 기법 유형, 최적화 시도 횟수, 최적화 로그 기록 객체를 \n",
+    "\n",
+    "      인자로 넣어줌. best = fmin(fn=objective_func, space=search_space, algo=algo, max_evals=5, trials=trials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8717810b",
+   "metadata": {},
+   "source": [
+    "## HyperOpt 설치\n",
+    "\n",
+    "- 윈도우 cmd를 관리자 모드로 실행\n",
+    "- pip install hyperopt "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8904a67d",
    "metadata": {},
    "source": [
@@ -10,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6596709a",
    "metadata": {},
    "outputs": [
@@ -30,17 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f893afc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install hyperopt==0.2.7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "5e4fdabe",
    "metadata": {},
    "outputs": [],
@@ -53,18 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e0d36412",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': <hyperopt.pyll.base.Apply at 0x1db7dd926d0>,\n",
-       " 'y': <hyperopt.pyll.base.Apply at 0x1db006dd130>}"
+       "{'x': <hyperopt.pyll.base.Apply at 0x233a4b4eca0>,\n",
+       " 'y': <hyperopt.pyll.base.Apply at 0x233a4b4ee50>}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "4dcf5c66",
    "metadata": {},
    "outputs": [],
@@ -93,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "8042337e",
    "metadata": {},
    "outputs": [
@@ -101,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████| 5/5 [00:00<00:00, 1109.37trial/s, best loss: -224.0]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 938.58trial/s, best loss: -224.0]\n",
       "best: {'x': -4.0, 'y': 12.0}\n"
      ]
     }
@@ -117,12 +346,17 @@
     "best_01 = fmin(fn=objective_func, space=search_space, algo=tpe.suggest, max_evals=5\n",
     "               , trials=trial_val, rstate=np.random.default_rng(seed=0)\n",
     "              )\n",
+    "\n",
+    "# best_01 = fmin(fn=objective_func, space=search_space, algo=tpe.suggest, max_evals=5\n",
+    "#                , trials=trial_val\n",
+    "#               )\n",
+    "\n",
     "print('best:', best_01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "2bbbd861",
    "metadata": {},
    "outputs": [
@@ -130,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████| 20/20 [00:00<00:00, 1176.21trial/s, best loss: -296.0]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 803.56trial/s, best loss: -296.0]\n",
       "best: {'x': 2.0, 'y': 15.0}\n"
      ]
     }
@@ -146,17 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "22cd2e49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hyperopt.base.Trials at 0x1db006dd370>"
+       "<hyperopt.base.Trials at 0x233a4b4e3a0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "b6624c20",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1608,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1389,6 +1623,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
+   }
   }
  },
  "nbformat": 4,
