20221101 Office Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/4장/4.7_LightGBM.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/4장/4.7_LightGBM.ipynb
@@ -112,6 +112,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LightGBM 하이퍼 파라미터 튜닝 개요\n",
+    "- 트리구조\n",
+    "    - max_depth\n",
+    "    - num_leaves\n",
+    "    - min_child_samples\n",
+    "    - min_child_weight\n",
+    "\n",
+    "- 샘플 비율\n",
+    "    - subsample\n",
+    "    - colsample_bytree\n",
+    "\n",
+    "- 손실함수 규제\n",
+    "    - reg_lambda\n",
+    "    - reg_alpha\n",
+    "\n",
+    "\n",
+    "- 너무 많은 하이퍼 파라미턷르을 튜닝하는 것은 오히려 최적값을 찾는데 방해가 될 수 있음.\n",
+    "- 적당한 수준의 하이퍼 파라미터 개수 설정 필요"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
