20221103 Office Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/5장/5.1 회귀(Regression).ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/5장/5.1 회귀(Regression).ipynb
@@ -235,20 +235,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 경사하강법 정리"
+    "## 경사하강법 정리\n",
+    "$$\\frac{\\partial R(w)}{\\partial w_1} = -\\frac{2}{N}\\sum_{i=1}^n x_i * (y_i - (w_0 + w_1 * x_i)) = -\\frac{2}{N}\\sum_{i=1}^n x_i * (실제값_i - 예측값_i)$$\n",
+    "\n",
+    "$$\\frac{\\partial R(w)}{\\partial w_0} = -\\frac{2}{N}\\sum_{i=1}^n (y_i - (w_0 + w_1 * x_i)) = -\\frac{2}{N}\\sum_{i=1}^n (실제값_i - 예측값_i)$$\n",
+    "\n",
+    "$$w_1, w_0의 편미분 결과값인 -\\frac{2}{N}\\sum_{i=1}^n x_i * (실제값_i - 예측값_i) 와 -\\frac{2}{N}\\sum_{i=1}^n (실제값_i - 예측값_i)$$\n",
+    "\n",
+    "$$을\\; 반복적으로 \\; 보정하면서 \\; w_1, w_0 \\; 값을 \\; 업데이트\\; 하면\\; 비용함수\\; R(W)가 최소가\\; 되는 w_1, w_0값을\\; 구할수\\; 있음$$\n",
+    "\n",
+    "$$하지만\\;실제로는\\; 위\\; 편미분\\; 값이\\; 너무\\; 클\\; 수\\; 있기\\; 때문에\\; 보정계수\\; \\eta (에타) \\;를 \\;곱하는데, \\;이를 \"학습률(learning-rate)\"이라고 \\;함$$\n",
+    "\n",
+    "- 경사 하강법은 아래와 같은 새로운 w1, 새로운 w0를 반복적으로 업데이트 하면서 비용함수가 최소가 되는 값을 찾음\n",
+    "    - $$ 새로운\\; w_1 = \\;이전\\; w_1 - (-\\eta \\frac{2}{N}\\sum_{i=1}^n x_i * (실제값_i - 예측값_i)) = 이전\\; w_1 + \\eta \\frac{2}{N}\\sum_{i=1}^n x_i * (실제값_i - 예측값_i)$$\n",
+    "\n",
+    "    - $$ 새로운\\; w_0 = \\;이전\\; w_0 - (-\\eta \\frac{2}{N}\\sum_{i=1}^n (실제값_i - 예측값_i)) = 이전\\; w_0 + \\eta \\frac{2}{N}\\sum_{i=1}^n (실제값_i - 예측값_i)$$\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
