20221109 Office Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/5장/5.3_Gradient_Descent_5.4_LinearModel_5.5_Polynomial_5.6_Regularized_model.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/5장/5.3_Gradient_Descent_5.4_LinearModel_5.5_Polynomial_5.6_Regularized_model.ipynb
@@ -154,14 +154,20 @@
     "                       피처 엔지니어링의 기법중의 하나임.\n",
     "\n",
     "- $$ 단항\\; 피처\\; [x_1, x_2]를\\; Degree = 2,\\; 즉\\; 2차\\; 다항\\; 피처로\\; 변환한다면? $$\n",
-    "  - $$(x_1 + x_2)^2의 식 전개에 대응되는 [1, x_1, x_2, x_1x_2, x_1^2, x_2^2]의 다항 피처들로 변환$$\n",
-    "    - $$ 1차 단항 피처들의 값이 [x_1, x_2] = [0 1] 일 경우$$\n",
+    "  - $$(x_1 + x_2)^2의\\; 식\\; 전개에 대응되는\\; [1, x_1, x_2, x_1x_2, x_1^2, x_2^2]의\\; 다항 피처들로 변환$$\n",
+    "    - $$ 1차 단항 피처들의 값이 [x_1, x_2] = [0\\; 1] 일 경우$$\n",
     "    - $$ 2차 다항 피처들의 값은 [1, x_1 = 0, x_2 = 1, x_1x_2 = 0, x_1^2 = 0, x_2^2 = 1] 형태인 [1, 0, 1, 0, 0, 1] 로 변환 $$\n",
-    "- $$ 단항\\; 피처\\; [x_1, x_2]를\\; Degree = 3,\\; 즉\\; 2차\\; 다항\\; 피처로\\; 변환한다면? $$    \n",
+    "- $$ 단항\\; 피처\\; [x_1, x_2]를\\; Degree = 3,\\; 즉\\; 3차\\; 다항\\; 피처로\\; 변환한다면? $$    \n",
     "  - $$(x_1 + x_2)^3의 식 전개에 대응되는 [1, x_1, x_2, x_1x_2, x_1^2, x_2^2, x_1^3, x_1^2x_2, x_1x_2^2, x_2^3]의 다항 피처들로 변환$$\n",
     "\n",
-    "- PolynomialFeatures 변환후 LinearRegression 학습\n",
+    "- 사이킷런은 다항회귀를 바로 API로 제공하지 않음\n",
     "\n",
+    "- 대신 PolynomialFeatures 클래스로 원본 단항 피처들을 다항 피처들로 변환한 데이터 세트에 LinearRegression 객체를 적용하여 다항회귀 기능을 제공함.\n",
+    "\n",
+    "- Polynomial Features 변환 --> LinearRegression 학습\n",
+    "  - $$단항 피처 [x_1, x_2]를 2차 다항 피처 [1, x_1, x_2, x_1x_2, x_1^2, x_2^2]로 변경(degree=2로 가정)$$\n",
+    "  - PolynomalFeatures로 변환된 X 피처들을 LinearRegression 객체로 학습\n",
+    "  \n",
     "- 사이킷런에서는 일반적으로 Pipeline 클래스를 이용하여 PolynomialFeatures 변환과 LinearRegression 학습/예측을 결합하여 다항 회귀를 구현함. "
    ]
   },
@@ -1103,7 +1109,8 @@
    "source": [
     "PolynomialFeatures 클래스로 다항식 변환\n",
     "\n",
-    "![](./image02.png)"
+    "- $$ 1차 단항 피처들의 값이 [x_1, x_2] = [0\\; 1] 일 경우$$\n",
+    "- $$ 2차 다항 피처들의 값은 [1, x_1 = 0, x_2 = 1, x_1x_2 = 0, x_1^2 = 0, x_2^2 = 1] 형태인 [1, 0, 1, 0, 0, 1] 로 변환 $$"
    ]
   },
   {
