20221114 Office Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/6장/6-2_PCA.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/6장/6-2_PCA.ipynb
@@ -4,6 +4,155 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 6.2 PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA(Principal Component Analysis)의 이해\n",
+    "\n",
+    "- 고차원의 원본 데이터를 저 차원의 부분 공간으로 투영하여 데이터를 축소하는 기법\n",
+    "\n",
+    "    - 예를 들어 10차원의 데이터를 2차원의 부분 공간으로 투영하여 데이터를 축소\n",
+    "\n",
+    "- PCA는 원본 데이터가 가지는 데이터 변동성을 가장 중요한 정보로 간주하며 이 변동성에 기반한\n",
+    "\n",
+    "  원본 데이터 투영으로 차원 축소를 수행\n",
+    "\n",
+    "- <img src=\"../images/pca.png\" width=\"800px\" height=\"500px\" title=\"PCA의 이해\"></img>  \n",
+    "\n",
+    "  - PCA는 원본 데이터 변동성이 가장 큰 방향으로 순차적으로 축들을 생성하고, 이렇게 생성된 축으로 데이터를 투영하는 방식\n",
+    "\n",
+    "- PCA는 제일 먼저 원본 데이터에 가장 큰 데이터 변동성(Variance)을 기반으로 첫번째 벡터 축을 생성하고, 두번째 축은 첫번째 축을 제외하고\n",
+    "\n",
+    "  그 다음으로 변동성이 큰 축을 설정하는 뎅 이는 첫번째 축에 직각이 되는 벡터(직교 벡터)축 입니다. 세번째 축은 다시 두번째 축과 직각이 되는 \n",
+    "\n",
+    "  벡터를 설정하는 방식으로 축을 생성함. 이렇게 생선된 벡터 축에 원본 데이터를 투영하면 벡터 축의 개수만큼의 차원으로 원본 데이터가 차원 축소됨.\n",
+    "\n",
+    "  - <img src=\"../images/pca축.png\" width=\"800px\" height=\"500px\" title=\"PCA의 축\"></img>  \n",
+    "\n",
+    "- PCA, 즉 주성분 분석은 이처럼 원본 데이터의 피처 개수에 비해 매우 작은 주성분으로 원본 데이터의 총 변동성을 대부분 설명할 수 있는 분석법임."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA 변환\n",
+    "\n",
+    "- PCA를 선형대수 관점에서 해석해 보면, 입력 데이터의 공분산 행렬(Covariance Matrix)을 고유값 분해하고, 이렇게 구한 고유 벡터에 입력 데이터를\n",
+    "\n",
+    "  선형 변환하는 것임.\n",
+    "\n",
+    "- 원본 데이터의 공분산 행렬 추출 --> 공분산 행렬을 고유 벡터와 고유값 분해 --> 원본 데이터를 고유 벡터로 선형 변환 --> PCA 변환값 도출\n",
+    "\n",
+    "- 고유벡터는 PCA의 주성분 벡터로서 입력 데이터의 분산이 큰 방향을 나타냄\n",
+    "\n",
+    "- 고유값(eigenvalue)은 바로 이 고유벡터의 크기를 나타내며, 동시에 입력 데이터의 분산을 나타냄.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 공분산 행렬\n",
+    "\n",
+    "- 보통 분산은 한 개의 특정한 변수의 데이터 변동을 의미하나, 공분산은 두 변수 간의 변동을 의미함. 즉, 사람 키 변수를 X, 몸무게 변수를 Y라고 하면\n",
+    "\n",
+    "  공분산 Cov(X, Y) > 0 은 X(키)가 증가할때 Y(몸무게)도 증가한다는 의미임.\n",
+    "\n",
+    "\n",
+    "- 공분산 행렬은 여러 변수와 관련된 공분산을 포함하는 정방형 행렬이며 대칭 행렬임.\n",
+    "\n",
+    "- 정방행렬은 행과 열이 같은 행렬을 지칭하는데, 정방행렬 중에서 대각 원소를 중심으로 원소 값이 대칭되는 행렬, 즉 A^T = A 인 행렬을 대칭행렬이라 함.\n",
+    "\n",
+    "- <img src=\"../images/공분산행렬.PNG\" width=\"800px\" height=\"500px\" title=\"공분산 행렬\"></img>  \n",
+    "\n",
+    "- <img src=\"../images/공분산.gif\" width=\"800px\" height=\"500px\" title=\"공분산\"></img>  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 선형 변환과 고유 벡터/고유값\n",
+    "\n",
+    "- 일반적으로 선형 변환은 특정 벡터에 행렬 A를 곱해 새로운 벡터로 변환하는 것을 의미함. 이를 특정 벡터를 하나의 공간에서 다른 공간으로 투영하는\n",
+    "\n",
+    "  개념으로 볼 수 있으며, 이 경우 이 행렬을 바로 공간으로 가정하는 것임.\n",
+    "\n",
+    "- 고유 벡터는 행렬 A를 곱하더라도 방향이 변하지 않고 그 크기만 변화하는 벡터를 지칭함. 즉, Ax = ax(A는 행렬, x는 고유벡터, a는 스칼라 값)임.\n",
+    "\n",
+    "- 이 고유벡터는 여러 개가 존재하며, 정방 행렬은 최대 그 차원 수만큼의 고유벡터를 가질 수 있음.\n",
+    "\n",
+    "    - 예를 들어 2 X 2 행렬은 두 개의 고유 벡터를, 3 X 3 행렬은 3개의 고유벡터를 가질 수 있음. \n",
+    "\n",
+    "- 이렇게 고유 벡터는 행렬이 작용하는 힘의 방향과 관계가 있어서 행렬을 분해하는데 사용함.\n",
+    "\n",
+    "    - <img src=\"../images/공분산1.png\" width=\"800px\" height=\"500px\" title=\"공분산1\"></img>  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 공분산 행렬의 고유값 분해\n",
+    "\n",
+    "- <img src=\"../images/공분산행렬.PNG\" width=\"800px\" height=\"500px\" title=\"공분산 행렬\"></img>  \n",
+    "\n",
+    "- 공분산 행렬은 정방행렬(Diagonal Matrix)이며 대칭행렬(Symmetric Matrix)임. 정방행렬은 열과 행이 같은 행렬을 지칭하는데, \n",
+    "\n",
+    "  정방행렬 중에서 대각 원소를 중심으로 원소값이 대칭되는 행렬, 즉 A^T = A인 행렬을 대칭행렬이라고 함.\n",
+    "\n",
+    "- 대칭행렬은 고유값 분해와 관련해 매우 좋은 특성이 있음. 대칭행렬은 항상 고유벡터를 직교행렬(orthogonal matrix)로, 고유값을 정방행렬로 \n",
+    "\n",
+    "  대각화 할 수 있다는 것임.\n",
+    "\n",
+    "    - <img src=\"../images/고유값분해.png\" width=\"800px\" height=\"500px\" title=\"고유값 분해\"></img>  \n",
+    "\n",
+    "        - P는 n X n의 직교 행렬이며, 시그마는 n X n 정방행렬, P^T는 행렬 P의 전치 행렬임.\n",
+    "\n",
+    "        - 공분산 C는 고유벡터 직교 행렬, 고유값 정방행렬 * 고유벡터 직교 행렬의 전치 행렬로 분해됨\n",
+    "\n",
+    "        - e_i는 i번째 고유벡터를, 람다_i는 i번째 고유벡터의 크기를 의미함. 고유벡터는 바로 PCA의 축임.\n",
+    "\n",
+    "        - e_1는 가장 분산이 큰 방향을 가진 고유벡터이며, e_2는 e_1에 수직이면서 다음으로 가장 분산이 큰 방향을 가진 고유벡터임.\n",
+    "\n",
+    "\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA 변환과 수행 절차\n",
+    "\n",
+    "- PCA 변환\n",
+    "    - 입력 데이터의 공분산 행렬이 고유벡터와 고유값으로 분해될 수 있으며, 이렇게 분해된 고유벡터를 이용해 입력 데이터를 선형 변환하는 방식\n",
+    "\n",
+    "- PCA 변환 수행 절차\n",
+    "    1. 입력 데이터 세트의 공분산 행렬을 생성함\n",
+    "    2. 공분산 행렬의 고유벡터와 고유값을 계산\n",
+    "    3. 고유값이 가장 큰 순으로 K개(PCA 변환 차수만큼) 고유벡터를 추출함.\n",
+    "    4. 고유값이 가장 큰 순으로 추출된 고유벡터를 이용해 새롭게 입력 데이터를 변환함."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 붓꽃 데이터로 PCA 변환을 위한 데이터 로딩 및 시각화 "
    ]
   },
@@ -783,7 +932,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -797,11 +946,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
    }
   }
  },
