20221118 Office Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/6장/6-2_PCA.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/6장/6-2_PCA.ipynb
@@ -146,6 +146,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 사이킷런 PCA\n",
+    "\n",
+    "- 사이킷런은 PCA를 위해 PCA 클래스를 제공함.\n",
+    "    - sklearn.decomposition.PCA(n_components=None, copy=True, whiten=False, svd_solver='auto', tol=0.0, iterated_power='auto', random_state=None)\n",
+    "        - n_componets : PCA 축의 개수. 즉 변환 차원을 의미\n",
+    "        \n",
+    "        - PCA를 적용하기 전에 입력 데이터의 개별 피처들을 스케일링 해야함. PCA는 여러 피처들의 값을 연산해야 하므로  피처들의 스케일에\n",
+    "\n",
+    "          영향을 받음. 따라서, 여러 속성을 PCA로 압축하기 전에 각 피처들의 값을 동일한 스케일로 변환하는 것이 필요함.\n",
+    "\n",
+    "          일반적으로 평균이 0, 분산이 1인 표준 정규 분포로 변환함.\n",
+    "\n",
+    "        - PCA 변환이 완료된 사이킷런 PCA 객체는 전체 변동성에서 개별 PCA 컴포넌트별로 차지하는 변동성 비율을 explained_variance_ratio_ 속성으로\n",
+    "        \n",
+    "          제공함\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## "
    ]
   },
@@ -289,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +331,7 @@
        "(150, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +432,7 @@
        "2        -2.364229        -0.341908       0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -548,12 +569,14 @@
    "source": [
     "### 신용카드 데이터 세트 PCA 변환\n",
     "\n",
-    "**데이터 로드 및 컬럼명 변환**"
+    "**데이터 로드 및 컬럼명 변환**\n",
+    "\n",
+    "- https://archive.ics.uci.edu/ml/datasets/default+of+credit+card+clients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +741,7 @@
        "2                           0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,14 +751,15 @@
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', 30)\n",
     "\n",
-    "df = pd.read_excel('pca_credit_card.xls', header=1, sheet_name='Data').iloc[:,1:]\n",
+    "df = pd.read_excel('../DataSets/creditcard/pca_credit_card.xls', header=1, sheet_name='Data').iloc[:,1:]\n",
+    "\n",
     "print(df.shape)\n",
     "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -886,15 +910,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV=3 인 경우의 PCA 변환된 개별 Fold세트별 정확도: [0.793  0.7958 0.8026]\n",
-      "PCA 변환 데이터 셋 평균 정확도:0.7971\n"
+      "CV=3 인 경우의 PCA 변환된 개별 Fold세트별 정확도: [0.7928 0.7961 0.8018]\n",
+      "PCA 변환 데이터 셋 평균 정확도:0.7969\n"
      ]
     }
    ],
