--- a/data_analysis/LaTeX 문법/LaTex.ipynb
+++ b/data_analysis/LaTeX 문법/LaTex.ipynb
@@ -25,6 +25,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\\frac{\\partial{R(w)}}{\\partial{w_1}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{d}{dx}f(x) = \\lim_{\\Delta x\\to0} \\frac{f(x+\\Delta x)-f(x)}{\\Delta x}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$H(X) = \\frac{1}{1+e^{-(W^TX)}}$$"
    ]
   },
@@ -140,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -154,12 +168,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
    }
   }
  },
