20221126 Home Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/8장/8.5 감성 분석.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/8장/8.5 감성 분석.ipynb
@@ -4,12 +4,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 지도학습 기반 감성 분석 실습 – IMDB 영화평"
+    "# 감성 분석"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 감성 분석\n",
+    "\n",
+    "- 감성 분석(Sentiment Analysis)은 문서의 주관적인 감성/의견/감정/기분 등을 파악하기 위한 방법으로 소셜 미디어, 여론조사, 온라인 리뷰, 피드백 등 다양한 분야에서 활용되고 있음\n",
+    "\n",
+    "- 지도학습 기반의 분석\n",
+    "    - 지도학습은 학습 데이터와 타깃 레이블 값을 기반으로 감성 분석 학습을 수행한 뒤 이를 기반으로 다른 데이터의 감성 분석을 예측하는 방법으로 일반적인 텍스트 기반의 분류와 거의 동일함\n",
+    "\n",
+    "- 감성 어휘 사전을 이용한 분석\n",
+    "    - 감성 어휘 사전은 감성 분석을 위한 용어와 문맥에 대한 다양한 정보를 가지고 있으며, 이를 이용해 문서의 긍정적, 부정적 감성 여부를 판단함\n",
+    "    - 문서 내 텍스트가 나타내는 여러 가지 주관적인 단어와 문맥을 기반으로 감성(Sentiment) 수치를 계산하는 방법을 이용함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 감성 분석 - 지도학습\n",
+    "\n",
+    "- IMDB의 영화 Review에 대한 긍정/부정 예측"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 감성 어휘 사전 기반의 감성 분석\n",
+    "\n",
+    "- SentiWordNet\n",
+    "    - NLTK 패키지의 WordNet과 유사하게 감성 단어 전용의 WordNet을 구현한 것임. SentiWordNet은 Synset별로 3가지 감성 점수(sentiment score)를 할당함\n",
+    "    - 긍정 감성지수, 부정 감성 지수, 객관성 지수가 그것임. 긍정 감성 지수는 해당 단어가 감성적으로 얼마나 긍정적인가를, 부정 지수는 얼마나 감성적으로 부정적인가를 수치로 나타낸 것임\n",
+    "    - 객관성 지수는 긍정/부정 감성 지수와 완전히 반대되는 개념으로 단어가 감성과 관계없이 얼마나 객관적인지를 수치로 나타낸 것임\n",
+    "    - 문장별로 단어들의 긍정 감성 지수와 부정 감성 지수를 합산하여 최종 감성 지수를 계산하고 이에 기반해 감성이 긍정인지 부정인지를 결정함\n",
+    "  \n",
+    "- VADER\n",
+    "    - 주로 소셜 미디어의 텍스트에 대한 감성 분석을 제공하기 위한 패키지임. 뛰어난 감성 분석 결과를 제공하며, 비교적 빠른 수행 시간을 보장해 대용량 텍스트 데이터에 잘 사용되는 패키지임\n",
+    "\n",
+    "- Pattern\n",
+    "    - 예측 성능 측면에서 가장 주목받는 패키지임. 아쉽게도 현재 기준으로 파이썬 3.X 버전에서 호환되지 않고, 파이썬 2.X 버전에서만 동작함\n",
+    "    - 이 책에서는 사용 예제를 소개하지는 않으나 감성 분석에 관심이 많은 사람이라면 적용해 보는 것도 좋음"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SentiWordNet의 감성 지수\n",
+    "\n",
+    "- <img src=\"../images/wordnet.png \" width=\"1200px\" height=\"600px\" title=\"Sentiwordnet\"></img>\n",
+    "    - 감성지수는 주관적, 객관적 지수로 분할. 주관적 지수는 다시 긍정과 부정 지수로 분할\n",
+    "    - \n",
+    "\n",
+    "- <img src=\"../images/wordnet1.png \" width=\"1000px\" height=\"600px\" title=\"Sentiwordnet\"></img>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SentiWordNet을 이용한 감성 분석\n",
+    "\n",
+    "1. 문서(Document)를 문장(Sentence) 단위로 분해\n",
+    "2. 다시 문자을 단어(Word) 단위로 토큰화 하고 품사 태깅\n",
+    "3. 품사 태깅된 단어 기반으로 synset 객체와 senti_synset 객체를 생성\n",
+    "4. Senti_synset에서 긍정 감성/부정 감성 지수를 구하고 이를 모두 합산해 특정 임계치 값 이상일때 긍정 감성으로, 그렇지 않을 때는 부정 감성으로 결정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## VADER\n",
+    "\n",
+    "- VADER는 소셜 미디어의 감성 분석 용도로 만들어진 룰 기반의 Lexicon 임\n",
+    "- VADER는 SentimentIntensityAnalyzer 클래스를 이용해 쉽게 감성 분석을 제공함\n",
+    "- SentimentIntensityAnalyzer 객체를 생성한 뒤에 문서별로 polarity_scores() 메서드를 호출해 감성 점수를 구한 뒤, 해당 문서의 감성 점수가 특정 임계값 이상이면 긍정, 그렇지 않으면 부정으로 판단함\n",
+    "- 'neg'는 부정 감성 지수, 'neu'는 중립적인 감성 지수, 'pos'는 긍정 감성 지수, 그리고 compound는 neg, neu, pos score를 적절히 조합해 -1에서 1사이의 감성 지수를 표현한 값임\n",
+    "- compound score를 기반으로 부정 감성 또는 긍정 감성 여부를 결정함. 보통 0.1 이상이면 긍정 감성, 그 이하이면 부정감성으로 판단하나 상황에 따라 이 임계값을 적절히 예측 성능을 조절함\n",
+    "- {'neg':0.13, 'new':0.743, 'pos':0.127, 'compound':-0.7943}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 지도학습 기반 감성 분석 실습 – IMDB 영화평\n",
+    "\n",
+    "- https://www.kaggle.com/c/word2vec-nlp-tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +161,7 @@
        "2  \"7759_3\"          0  \"The film starts with a manager (Nicholas Bell..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,15 +169,23 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "review_df = pd.read_csv('./labeledTrainData.tsv', header=0, sep=\"\\t\", quoting=3)\n",
+    "review_df = pd.read_csv('../DataSets/IMDB/labeledTrainData.tsv', header=0, sep=\"\\t\", quoting=3)\n",
     "review_df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " With all this stuff going down at the moment with MJ i ve started listening to his music  watching the odd documentary here and there  watched The Wiz and watched Moonwalker again  Maybe i just want to get a certain insight into this guy who i thought was really cool in the eighties just to maybe make up my mind whether he is guilty or innocent  Moonwalker is part biography  part feature film which i remember going to see at the cinema when it was originally released  Some of it has subtle messages about MJ s feeling towards the press and also the obvious message of drugs are bad m kay   Visually impressive but of course this is all about Michael Jackson so unless you remotely like MJ in anyway then you are going to hate this and find it boring  Some may call MJ an egotist for consenting to the making of this movie BUT MJ and most of his fans would say that he made it for the fans which if true is really nice of him   The actual feature film bit when it finally starts is only on for    minutes or so excluding the Smooth Criminal sequence and Joe Pesci is convincing as a psychopathic all powerful drug lord  Why he wants MJ dead so bad is beyond me  Because MJ overheard his plans  Nah  Joe Pesci s character ranted that he wanted people to know it is he who is supplying drugs etc so i dunno  maybe he just hates MJ s music   Lots of cool things in this like MJ turning into a car and a robot and the whole Speed Demon sequence  Also  the director must have had the patience of a saint when it came to filming the kiddy Bad sequence as usually directors hate working with one kid let alone a whole bunch of them performing a complex dance scene   Bottom line  this movie is for people who like MJ on one level or another  which i think is most people   If not  then stay away  It does try and give off a wholesome message and ironically MJ s bestest buddy in this movie is a girl  Michael Jackson is truly one of the most talented people ever to grace this planet but is he guilty  Well  with all the attention i ve gave this subject    hmmm well i don t know because people can be different behind closed doors  i know this for a fact  He is either an extremely nice but stupid guy or one of the most sickest liars  I hope he is not the latter  \n"
+     ]
+    }
+   ],
    "source": [
     "print(review_df['review'][0])"
    ]
@@ -98,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,9 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((17500, 1), (7500, 1))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -143,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예측 정확도는 0.8860, ROC-AUC는 0.9503\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -176,9 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예측 정확도는 0.8936, ROC-AUC는 0.9598\n"
+     ]
+    }
+   ],
    "source": [
     "# 스톱 워드는 english, filtering, ngram은 (1,2)로 설정해 TF-IDF 벡터화 수행. \n",
     "# LogisticRegression의 C는 10으로 설정. \n",
@@ -418,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,22 +589,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#### VADER 예측 성능 평가 ####\n",
-      "[[ 6736  5764]\n",
-      " [ 1867 10633]]\n",
-      "정확도: 0.69476\n",
-      "정밀도: 0.6484722815149113\n",
-      "재현율: 0.85064\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('#### VADER 예측 성능 평가 ####')\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score \n",
@@ -498,7 +613,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +627,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
   }
  },
  "nbformat": 4,
