--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/8장/8.4 텍스트 분류 실습 _ 20 뉴스그룹 분류.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/8장/8.4 텍스트 분류 실습 _ 20 뉴스그룹 분류.ipynb
@@ -10,6 +10,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 20 Newsgroup 분류하기\n",
+    "\n",
+    "- 18846 개의 뉴스 문서를 20개의 뉴스 그룹 카테고리로 분류하기\n",
+    "\n",
+    "- 텍스트 정규화 --> 피처 벡터화 --> 머신러닝(학습/예측/평가) --> Pipline 적용 --> GridSearchCV 최적화"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "sklearn.utils.Bunch"
+       "sklearn.utils._bunch.Bunch"
       ]
      },
      "execution_count": 2,
@@ -194,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,14 +273,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7532, 101631)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_cnt_vect.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CountVectorized Logistic Regression 의 예측 정확도는 0.616\n"
+      "CountVectorized Logistic Regression 의 예측 정확도는 0.617\n"
      ]
     }
    ],
@@ -298,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +525,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
   }
  },
  "nbformat": 4,
